--- a/speaker-details.html
+++ b/speaker-details.html
@@ -38,7 +38,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#main"><span>E</span>vent</a></h1>
+        <h1><a href="index.html">The <span>E</span>vent</a></h1>
       </div>
 
       <nav id="nav-menu-container">
