Index :crystal_ball:

--- a/index.html
+++ b/index.html
@@ -540,12 +540,16 @@
     ============================-->
     <section id="venue" class="wow fadeInUp">
 
-      <div class="container-fluid">
-
+      <div class="container">
         <div class="section-header">
           <h2>Event Venue</h2>
           <p>Event venue location info and gallery</p>
         </div>
+      </div>
+
+      <div class="container-fluid">
+
+
 
         <div class="row no-gutters">
           <div class="col-lg-6 venue-map">
