--- a/speaker-details.html
+++ b/speaker-details.html
@@ -77,7 +77,7 @@
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Brenden Legros</h2>
+              <h2>Lorem Ipsum</h2>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
