--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="row text-center">
 
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card h-100">
+				<div class="card cardheight">
 					<img class="card-img-top imagealign" src="jy.png" alt="">
 					<div class="card-body">
 						<h4 class="card-title">Holy Mass (English Latin)</h4>
@@ -75,7 +75,7 @@
 			</div>
 
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card h-100">
+				<div class="card cardheight">
 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
 					<div class="card-body">
 						<h4 class="card-title">Shekinah Television (Malayalam)</h4>
@@ -89,7 +89,7 @@
 			</div>
 
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card h-100">
+				<div class="card cardheight">
 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
 					<div class="card-body">
 						<h4 class="card-title">Palai Roopatha (Malayalam)</h4>
@@ -104,7 +104,7 @@
 			</div>
 
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card h-100">
+				<div class="card cardheight">
 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
 					<div class="card-body">
 						<h4 class="card-title">Kuravilangad Church (Malayalam Mass)</h4>
@@ -117,7 +117,7 @@
 			</div>
 
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card h-100">
+				<div class="card cardheight">
 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
 					<div class="card-body">
 						<h4 class="card-title">Daily mass by Pope Francis</h4>
@@ -131,7 +131,7 @@
 			
 			
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card h-100">
+				<div class="card cardheight">
 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
 					<div class="card-body">
 						<h4 class="card-title">St. Mary's Church Dubai (English)</h4>
