--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<img class="card-img-top imagealign" src="jy.png" alt="">
+<!-- 					<img class="card-img-top imagealign" src="jy.png" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Holy Mass (English Latin)</h4>
 						<p class="card-text">Jesus Youth International Office everyday
@@ -76,7 +76,7 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
+					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Shekinah Television (Malayalam)</h4>
 						<p class="card-text">Holy mass and spiritual talks</p>
@@ -90,7 +90,7 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
+					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Palai Roopatha (Malayalam)</h4>
 						<p class="card-text">Palai Roopatha. Holy mass and spiritual
@@ -105,7 +105,7 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
+					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Kuravilangad Church (Malayalam Mass)</h4>
 						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm</p>
@@ -118,7 +118,7 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
+					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Daily mass by Pope Francis</h4>
 						<p class="card-text">Daily mass from Santa Maria by Pope Francis</p>
@@ -132,7 +132,7 @@
 			
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<img class="card-img-top imagealign" src="sacredheart.jpg" alt="">
+<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> --> 
 					<div class="card-body">
 						<h4 class="card-title">St. Mary's Church Dubai (English)</h4>
 						<p class="card-text">Daily mass from St. Mary's Church Dubai</p>
