removed unwanted links

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<li class="nav-item active"><a class="nav-link" href="#">Home
 							<span class="sr-only">(current)</span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Services</a>
+					<!-- <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Services</a> -->
 					</li>
 					<li class="nav-item"><a class="nav-link" href="http://jyinfopark.in/">Contact</a>
 					</li>
@@ -53,7 +53,7 @@
 			<h1 class="display-3">Catholic Streams</h1>
 			<p class="lead">No matter where you are stay close to him. Stay
 				blessed</p>
-			<a href="http://jyinfopark.in/" class="btn btn-primary btn-lg">Call to action!</a>
+			<!-- <a href="http://jyinfopark.in/" class="btn btn-primary btn-lg">Call to action!</a> -->
 		</header>
 
 		<!-- Page Features -->
@@ -138,7 +138,7 @@
 						<p class="card-text">Daily mass from St. Mary's Church Dubai</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.vaticannews.va/en/taglist.chiesa-e-religioni.Chiesa.messa.html" class="btn btn-primary">Go</a>
+						<a href="https://saintmarysdubai.org/live" class="btn btn-primary">Go</a>
 					</div>
 				</div>
 			</div>			
@@ -151,7 +151,7 @@
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Powered by &copy; Jesus Youth Infopark</p>
+			<p class="m-0 text-center text-white">Made with love &copy; Jesus Youth Infopark</p>
 		</div>
 		<!-- /.container -->
 	</footer>
