--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="https://www.facebook.com/jesusyouthinternational/"
-							class="btn btn-warning goButton">Go</a>
+							class="btn btn-warning goButton">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="https://www.youtube.com/ShekinahTelevision"
-							class="btn btn-warning goButton">Go</a>
+							class="btn btn-warning goButton">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -102,7 +102,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="https://www.youtube.com/PalaiRoopathaOfficial"
-							class="btn btn-warning goButton">Go</a>
+							class="btn btn-warning goButton">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton">Go</a>
+						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -128,7 +128,7 @@
 						<p class="card-text">Daily mass from Santa Maria by Pope Francis</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.vaticannews.va/en/taglist.chiesa-e-religioni.Chiesa.messa.html" class="btn btn-warning goButton">Go</a>
+						<a href="https://www.vaticannews.va/en/taglist.chiesa-e-religioni.Chiesa.messa.html" class="btn btn-warning goButton">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -142,7 +142,7 @@
 						<p class="card-text">Daily mass from St. Mary's Church Dubai</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://saintmarysdubai.org/live" class="btn btn-warning goButton">Go</a>
+						<a href="https://saintmarysdubai.org/live" class="btn btn-warning goButton">Watch</a>
 					</div>
 				</div>
 			</div>			
