logo added in header

--- a/index.html
+++ b/index.html
@@ -53,11 +53,23 @@
 	<div class="container">
 
 		<!-- Jumbotron Header -->
-		<header class="jumbotron my-4">
-			<h1 class="display-3">Catholic Streams</h1>
+		<header class="jumbotron my-4" style="    background-color: #f6c94a;">
+			<div class="row">
+				<div class="col-md-4">
+					<div style="width: 50%;" >
+					<img class="img-fluid" src="logo.jpeg"/>
+					</div>
+					
+				</div>
+				<div class="col-md-8">
+					<h1 class="display-3">Catholic Streams</h1>
 			<p class="lead">No matter where you are stay close to him. Stay
 				blessed</p>
-			<!-- <a href="http://jyinfopark.in/" class="btn btn-primary btn-lg">Call to action!</a> -->
+				</div>
+
+				
+			</div>
+			
 		</header>
 
 		<!-- Page Features -->
@@ -163,6 +175,15 @@
 	<!-- Bootstrap core JavaScript -->
 	<script src="vendor/jquery/jquery.min.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161546265-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161546265-1');
+</script>
 
 </body>
 
