--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">Catholic Streams</a>
+			<a class="navbar-brand" href="#">Catholic Stream</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
 				data-target="#navbarResponsive" aria-controls="navbarResponsive"
 				aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
 					
 				</div>
 				<div class="col-md-8">
-					<h1 class="display-3">Catholic Streams</h1>
+					<h1 class="display-3">Catholic Stream</h1>
 			<p class="lead">No matter where you are stay close to him. Stay
 				blessed</p>
 				</div>
