color theme modified

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- Bootstrap core CSS -->
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
 <!-- Custom styles for this template -->
 <link href="css/heroic-features.css" rel="stylesheet">
@@ -62,8 +63,8 @@
 					
 				</div>
 				<div class="col-md-8">
-					<h1 class="display-3">Catholic Stream</h1>
-			<p class="lead">No matter where you are stay close to him. Stay
+					<h1 class="display-3 text-white">Catholic Stream</h1>
+			<p class="lead text-white">No matter where you are stay close to him. Stay
 				blessed</p>
 				</div>
 
@@ -85,7 +86,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="https://www.facebook.com/jesusyouthinternational/"
-							class="btn btn-warning goButton">Watch</a>
+							class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -99,7 +100,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="https://www.youtube.com/ShekinahTelevision"
-							class="btn btn-warning goButton">Watch</a>
+							class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -114,7 +115,7 @@
 					</div>
 					<div class="card-footer">
 						<a href="https://www.youtube.com/PalaiRoopathaOfficial"
-							class="btn btn-warning goButton">Watch</a>
+							class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -127,7 +128,7 @@
 						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton">Watch</a>
+						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -140,7 +141,7 @@
 						<p class="card-text">Daily mass from Santa Maria by Pope Francis</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.vaticannews.va/en/taglist.chiesa-e-religioni.Chiesa.messa.html" class="btn btn-warning goButton">Watch</a>
+						<a href="https://www.vaticannews.va/en/taglist.chiesa-e-religioni.Chiesa.messa.html" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -154,7 +155,7 @@
 						<p class="card-text">Daily mass from St. Mary's Church Dubai</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://saintmarysdubai.org/live" class="btn btn-warning goButton">Watch</a>
+						<a href="https://saintmarysdubai.org/live" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>			
@@ -167,7 +168,7 @@
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Made with love &copy; Jesus Youth Infopark</p>
+			<p class="m-0 text-center text-white"><a href="http://jyinfopark.in/" class="text-white">Made with <i class="fa fa-heart" style="color: red;"></i></span> Jesus Youth Infopark</a></p>
 		</div>
 		<!-- /.container -->
 	</footer>
