--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 	<div class="container">
 
 		<!-- Jumbotron Header -->
-		<header class="jumbotron my-4" style="    background-color: #f6c94a;">
+		<header class="jumbotron my-4" style="    background-color: white;">
 			<div class="row">
 				<div class="col-md-4">
-					<div style="width: 50%;" >
-					<img class="img-fluid" src="logo.jpeg"/>
+					<div style="width: 60%;margin-left: auto;margin-right: auto;" >
+					<img class="img-fluid" src="des8.png"/>
 					</div>
 					
 				</div>
 				<div class="col-md-8">
-					<h1 class="display-3 text-white">Catholic Stream</h1>
-			<p class="lead text-white">No matter where you are stay close to him. Stay
+					<h1 class="display-3 text-warning">Catholic Stream</h1>
+			<p class="lead text-warning">No matter where you are stay close to him. Stay
 				blessed</p>
 				</div>
 
