logo postion corrected

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <meta name="author" content="">
 
 <title>Catholic Stream</title>
-
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- Bootstrap core CSS -->
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -56,19 +57,19 @@
 		<!-- Jumbotron Header -->
 		<header class="jumbotron my-4" style="    background-color: white;">
 			<div class="row">
-				<div class="col-md-4">
-					<div style="width: 60%;margin-left: auto;margin-right: auto;" >
+				<div class="col-md-12">
+					<div style="width: 30%;margin-left: auto;margin-right: auto;" >
 					<img class="img-fluid" src="des8.png"/>
 					</div>
 					
 				</div>
-				<div class="col-md-8">
+			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
 					<h1 class="display-3 text-warning">Catholic Stream</h1>
 			<p class="lead text-warning">No matter where you are stay close to him. Stay
 				blessed</p>
 				</div>
-
-				
 			</div>
 			
 		</header>
