--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h1 class="display-3 text-warning">Catholic Stream</h1>
+					<h1 style="padding-top: 7%;" class="display-3 text-warning font-weight-bold">Catholic Stream</h1>
 			<p class="lead text-warning">No matter where you are stay close to him. Stay
 				blessed</p>
 				</div>
