--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-<!-- 					<img class="card-img-top imagealign" src="jy.png" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Holy Mass (English Latin)</h4>
 						<p class="card-text">Jesus Youth International Office everyday
@@ -94,7 +93,6 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Shekinah Television (Malayalam)</h4>
 						<p class="card-text">Holy mass and spiritual talks</p>
@@ -108,7 +106,6 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Palai Roopatha (Malayalam)</h4>
 						<p class="card-text">Palai Roopatha. Holy mass and spiritual
@@ -123,7 +120,6 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Kuravilangad Church (Malayalam Mass)</h4>
 						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm</p>
@@ -136,13 +132,12 @@
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-					<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> -->
 					<div class="card-body">
 						<h4 class="card-title">Daily mass by Pope Francis</h4>
 						<p class="card-text">Daily mass from Santa Maria by Pope Francis</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.vaticannews.va/en/taglist.chiesa-e-religioni.Chiesa.messa.html" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
+						<a href="https://www.youtube.com/channel/UCxIsefyl9g9A5SGWA4FvGIA" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
 			</div>
@@ -150,7 +145,6 @@
 			
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
-<!-- 					<img class="card-img-top imagealign" src="sacredheart.jpg" alt=""> --> 
 					<div class="card-body">
 						<h4 class="card-title">St. Mary's Church Dubai (English)</h4>
 						<p class="card-text">Daily mass from St. Mary's Church Dubai</p>
@@ -159,7 +153,29 @@
 						<a href="https://saintmarysdubai.org/live" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
-			</div>			
+			</div>
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card cardheight">
+					<div class="card-body">
+						<h4 class="card-title">Marian Retreat Center Anakkara</h4>
+						<p class="card-text">Spiritual talks by Fr. Dominic Valanmanal</p>
+					</div>
+					<div class="card-footer">
+						<a href="https://www.youtube.com/channel/UCikhLc1Wo7SE8rlx9RimO_Q" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card cardheight">
+					<div class="card-body">
+						<h4 class="card-title">Shalom TV</h4>
+						<p class="card-text">Spiritual programs from shalom TV</p>
+					</div>
+					<div class="card-footer">
+						<a href="https://www.facebook.com/shalomtelevision/" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
+					</div>
+				</div>
+			</div>				
 		</div>
 		<!-- /.row -->
 
