time zone updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="card-body">
 						<h4 class="card-title">Holy Mass (English Latin)</h4>
 						<p class="card-text">Jesus Youth International Office everyday
-							@ 12.30 IST.</p>
+							@ 12.30 IST  (7 AM GST).</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.facebook.com/jesusyouthinternational/"
@@ -122,7 +122,7 @@
 				<div class="card cardheight">
 					<div class="card-body">
 						<h4 class="card-title">Kuravilangad Church (Malayalam Mass)</h4>
-						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm</p>
+						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm (IST)</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
