jy link updated

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							@ 12.30 IST  (7 AM GST).</p>
 					</div>
 					<div class="card-footer">
-						<a href="https://www.facebook.com/jesusyouthinternational/"
+						<a href="https://www.instagram.com/jesusyouthinternational/"
 							class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
