jy time updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="card-body">
 						<h4 class="card-title">Holy Mass (English Latin)</h4>
 						<p class="card-text">Jesus Youth International Office everyday
-							@ 12.30 IST  (7 AM GST).</p>
+							@ 12.30 IST  (7 AM GMT).</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.instagram.com/jesusyouthinternational/"
