holy mass timing updated

--- a/index.html
+++ b/index.html
@@ -94,8 +94,35 @@
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
 					<div class="card-body">
+						<h4 class="card-title">Goodness TV (Malayalam)</h4>
+						<p class="card-text">
+							6.00 AM , 10.00 AM , 2.00 PM , 6.00 PM , 10.00PM (IST) 
+							<br/>
+							0.30 AM , 04.30 AM , 08.30 AM , 12.30 PM , 04.30 PM (GMT) 
+						</p>
+						
+					</div>
+					<div class="card-footer">
+						<a href="https://www.youtube.com/user/GOODNESSTELEVISION" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card cardheight">
+					<div class="card-body">
+						<h4 class="card-title">Kuravilangad Church (Malayalam Mass)</h4>
+						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. <br/> Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm (IST)</p>
+					</div>
+					<div class="card-footer">
+						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card cardheight">
+					<div class="card-body">
 						<h4 class="card-title">Shekinah Television (Malayalam)</h4>
-						<p class="card-text">Holy mass and spiritual talks</p>
+						<p class="card-text">Holy mass and spiritual talks.<br/>Holy mass @ 12.00 PM IST (06.30 AM GMT)</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.youtube.com/ShekinahTelevision"
@@ -118,17 +145,7 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card cardheight">
-					<div class="card-body">
-						<h4 class="card-title">Kuravilangad Church (Malayalam Mass)</h4>
-						<p class="card-text">Weekdays 5.30 am , 6.30 am, 5 pm. Sunday : 5.30 am , 7am , 9am, 11am ,4.30 pm (IST)</p>
-					</div>
-					<div class="card-footer">
-						<a href="https://www.facebook.com/KuravilangadChurch" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
-					</div>
-				</div>
-			</div>
+			
 
 			<div class="col-lg-3 col-md-6 mb-4">
 				<div class="card cardheight">
@@ -175,7 +192,8 @@
 						<a href="https://www.facebook.com/shalomtelevision/" class="btn btn-warning goButton text-white font-weight-bold">Watch</a>
 					</div>
 				</div>
-			</div>				
+			</div>
+							
 		</div>
 		<!-- /.row -->
 
