holy mass timing corrected

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<div class="card-body">
 						<h4 class="card-title">Holy Mass (English Latin)</h4>
 						<p class="card-text">Jesus Youth International Office everyday
-							@ 12.30 PM IST  (07.00 AM GMT).</p>
+						 12.30 PM IST<br/>  (07.00 AM GMT).</p>
 					</div>
 					<div class="card-footer">
 						<a href="https://www.instagram.com/jesusyouthinternational/"
@@ -98,7 +98,7 @@
 						<p class="card-text">
 							6.00 AM , 10.00 AM , 2.00 PM , 6.00 PM , 10.00PM (IST) 
 							<br/>
-							0.30 AM , 04.30 AM , 08.30 AM , 12.30 PM , 04.30 PM (GMT) 
+							(0.30 AM , 04.30 AM , 08.30 AM , 12.30 PM , 04.30 PM GMT) 
 						</p>
 						
 					</div>
