prayer links added

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 				✝	Observe the PROPER GESTURES of standing, kneeling & sitting at appropriate times in the HOLY MASS.
 				<br/>
 				✝	During the time of receiving communion, please RECITE the SPIRITUAL COMMUNION PRAYER.
+				<br/>Download prayer here : <a href="english.jpeg" download="english.jpeg" target="_blank">English</a> &nbsp; <a download="malayalam.jpeg" href="malayalam.jpeg">Malayalam</a>
 			
 			</div>
 			<div class="modal-footer">
